--- a/direwolf/app/views/welcome/index.html.erb
+++ b/direwolf/app/views/welcome/index.html.erb
@@ -1,5 +1,6 @@
 <h1> DireWolf Job Portal </h1>
-<h2> Coming Soon! </h2>
+<h2> Under Contruction </h2>
+<h3> Coming Soon! </h3>
 <footer>
   <p> Created By: </p>
   <p> David Zager </p>
