--- a/direwolf/app/views/welcome/index.html.erb
+++ b/direwolf/app/views/welcome/index.html.erb
@@ -1,9 +1,13 @@
-<h1> DireWolf Job Portal </h1>
-<h2> Under Contruction </h2>
-<h3> Coming Soon! </h3>
-<footer>
-  <p> Created By: </p>
-  <p> David Zager </p>
-  <p> Prashant Solanki </p>
-  <p> Ying Lei </p>
-</footer>
+<div class="page-header">
+  <h1>DireWolf Job Portal <small>Coming Soon!</small></h1>
+</div>
+
+<div class="alert alert-danger" role="alert">
+  <a href="#" class="alert-link">Under Contruction</a>
+</div>
+
+<ul class="list-group">
+  <li class="list-group-item">David Zager</li>
+  <li class="list-group-item">Prashant Solanki</li>
+  <li class="list-group-item">Ying Lei</li>
+</ul>
