--- a/direwolf/app/views/welcome/index.html.erb
+++ b/direwolf/app/views/welcome/index.html.erb
@@ -1,13 +1,12 @@
-<div class="page-header">
-  <h1>DireWolf Job Portal <small>Coming Soon!</small></h1>
-</div>
+<!-- Main component for a primary marketing message or call to action -->
+<div class="alert alert-danger" role="alert">Under Contruction</div>
 
-<div class="alert alert-danger" role="alert">
-  <a href="#" class="alert-link">Under Contruction</a>
-</div>
+<div class="jumbotron">
+    <h1>DireWolf Job Portal <small>Coming Soon!</small></h1>
 
-<ul class="list-group">
-  <li class="list-group-item">David Zager</li>
-  <li class="list-group-item">Prashant Solanki</li>
-  <li class="list-group-item">Ying Lei</li>
-</ul>
+    <ul class="list-group">
+        <li class="list-group-item">David Zager</li>
+        <li class="list-group-item">Prashant Solanki</li>
+        <li class="list-group-item">Ying Lei</li>
+    </ul>
+</div>
