Fixing Yinglei's name

--- a/direwolf/app/views/welcome/index.html.erb
+++ b/direwolf/app/views/welcome/index.html.erb
@@ -9,5 +9,5 @@
 <ul class="list-group">
   <li class="list-group-item">David Zager</li>
   <li class="list-group-item">Prashant Solanki</li>
-  <li class="list-group-item">Ying Lei</li>
+  <li class="list-group-item">Yinglei Zhang</li>
 </ul>
