Updating bootstrap by putting it in its place without breaking things

--- a/direwolf/app/views/welcome/index.html.erb
+++ b/direwolf/app/views/welcome/index.html.erb
@@ -1,12 +1,5 @@
 <!-- Main component for a primary marketing message or call to action -->
-<div class="alert alert-danger" role="alert">Under Contruction</div>
-
 <div class="jumbotron">
-    <h1>DireWolf Job Portal <small>Coming Soon!</small></h1>
-
-    <ul class="list-group">
-        <li class="list-group-item">David Zager</li>
-        <li class="list-group-item">Prashant Solanki</li>
-        <li class="list-group-item">Yinglei Zhang</li>
-    </ul>
+    <h1>DireWolf Job Portal</h1>
+    <p>Motivational talk about the DireWolf Job Portal.</p>
 </div>
