--- a/direwolf/app/views/layouts/application.html.erb
+++ b/direwolf/app/views/layouts/application.html.erb
@@ -17,27 +17,9 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">DireWolf Job Portal</a>
+                    <%= link_to "Direwolf Job Portal", "/", class: "navbar-brand" %>
                 </div>
                 <div class="navbar-collapse collapse">
-                    <!-- Maybe load user specific links here-->
-                    <!--<ul class="nav navbar-nav">-->
-                        <!--<li class="active"><a href="#">Link</a></li>-->
-                        <!--<li><a href="#">Link</a></li>-->
-                        <!--<li><a href="#">Link</a></li>-->
-                        <!--<li class="dropdown">-->
-                            <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>-->
-                            <!--<ul class="dropdown-menu" role="menu">-->
-                                <!--<li><a href="#">Action</a></li>-->
-                                <!--<li><a href="#">Another action</a></li>-->
-                                <!--<li><a href="#">Something else here</a></li>-->
-                                <!--<li class="divider"></li>-->
-                                <!--<li class="dropdown-header">Nav header</li>-->
-                                <!--<li><a href="#">Separated link</a></li>-->
-                                <!--<li><a href="#">One more separated link</a></li>-->
-                            <!--</ul>-->
-                        <!--</li>-->
-                    <!--</ul>-->
                     <ul class="nav navbar-nav navbar-right">
                         <% if current_user %>
                             <li class="dropdown">
@@ -47,7 +29,7 @@
                                 </ul>
                             </li>
                         <% else %>
-                            <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
+                            <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in", class: "navbar-btn btn btn-default pull-right" %>
                         <% end %>
                     </ul>
                 </div><!--/.nav-collapse -->
