--- a/direwolf/app/views/layouts/application.html.erb
+++ b/direwolf/app/views/layouts/application.html.erb
@@ -36,11 +36,16 @@
             </div><!--/.container-fluid -->
         </div>
 
-        <div class="container">
+        <div id="wrap" class="container">
 
             <%= yield %>
 
         </div> <!-- /container -->
 
+        <div id="footer">
+            <div class="container">
+                <p class="text-muted">DireWolf Creators: Prashant Solanki, David Zager, and Yinglei Zhang.</p>
+            </div>
+        </div>
   </body>
 </html>
