--- a/direwolf/app/views/layouts/application.html.erb
+++ b/direwolf/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <body>
         <!-- Static navbar -->
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container-fluid">
+            <div class="container container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="sr-only">Toggle navigation</span>
@@ -20,6 +20,10 @@
                     <%= link_to "Direwolf Job Portal", root_path, class: "navbar-brand" %>
                 </div>
                 <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <% if current_user %>
                             <li class="dropdown">
@@ -32,6 +36,12 @@
                             <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in", class: "navbar-btn btn btn-default pull-right" %>
                         <% end %>
                     </ul>
+                    <form class="navbar-form navbar-right" style="padding-right: 30px" role="search">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Search">
+                        </div>
+                        <button type="submit" class="btn btn-default">Submit</button>
+                    </form>
                 </div><!--/.nav-collapse -->
             </div><!--/.container-fluid -->
         </div>
