--- a/direwolf/app/views/admins/_form.html.erb
+++ b/direwolf/app/views/admins/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@admin) do |f| %>
+<%= form_for @admin, :html => {:class => "form-horizontal center"} do |f| %>
   <% if @admin.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@admin.errors.count, "error") %> prohibited this admin from being saved:</h2>
@@ -11,7 +11,13 @@
     </div>
   <% end %>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="field">
+    <%= f.label :name, "Name:", class: "col-md-4 control-label" %>
+    <%= f.text_field :name %>
+  </div>
+  <div class="field">
+    <div class="col-md-4">
+      <%= f.submit "Submit", class: "btn btn-default btn-primary" %>
+    </div>
   </div>
 <% end %>
