--- a/direwolf/app/views/home/register.html.erb
+++ b/direwolf/app/views/home/register.html.erb
@@ -1,34 +1,3 @@
-<form role="form" class="form-horizontal">
-  <fieldset>
-    <div class="form-group">
-      <label class="col-sm-2 control-label">User Type:</label>
-      <div class="col-sm-3">
-        <select class="form-control">
-          <option value="1">Admin</option>
-          <option value="2">Employer</option>
-          <option value="3">Jobseeker</option>
-        </select>
-      </div>
-    </div>
-  </fieldset>
-  <div class="form-group">
-    <label for="name" class="col-sm-2 control-label">Name:</label>
-    <div class="col-sm-3">
-      <input type="string" class="form-control" id="name" placeholder="<%=current_user.name%>"/>
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="phone" class="col-sm-2 control-label">Phone Number:</label>
-    <div class="col-sm-3">
-        <input type="string" class="form-control" id="phone" placeholder="(___)___-____"/>
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="resume" class="col-sm-2 control-label">Resume Upload:</label>
-    <div class="col-sm-3">
-        <input type="file" id="resume">
-        <p class="help-block">In order to compete for jobs, you should upload your resume.</p>
-    </div>
-  </div>
-  <button type="submit" class="btn btn-default">Submit</button>
-</form>
+<%= link_to "Admin", new_admin_path, class: "btn btn-success" %>
+<%= link_to "Seeker", new_seeker_path, class: "btn btn-success" %>
+<%= link_to "Employer", new_employer_path, class: "btn btn-success" %>
