--- a/direwolf/app/views/home/register.html.erb
+++ b/direwolf/app/views/home/register.html.erb
@@ -1,3 +1,20 @@
-<%= link_to "Admin", new_admin_path, class: "btn btn-success" %>
-<%= link_to "Seeker", new_seeker_path, class: "btn btn-success" %>
-<%= link_to "Employer", new_employer_path, class: "btn btn-success" %>
+<div class="row">
+  <div class="col-xs-4">
+    <%= link_to "Admin", new_admin_path, class: "btn btn-success" %>
+    <!--<a href="#" class="thumbnail">-->
+      <!--<img src="../images/125x125.jpg" alt="125x125">-->
+    <!--</a>-->
+  </div>
+  <div class="col-xs-4">
+    <%= link_to "Seeker", new_seeker_path, class: "btn btn-success" %>
+    <!--<a href="#" class="thumbnail">-->
+      <!--<img src="../images/125x125.jpg" alt="125x125">-->
+    <!--</a>-->
+  </div>
+  <div class="col-xs-4">
+    <%= link_to "Employer", new_employer_path, class: "btn btn-success" %>
+    <!--<a href="#" class="thumbnail">-->
+      <!--<img src="../images/125x125.jpg" alt="125x125">-->
+    <!--</a>-->
+  </div>
+</div>
