Update admin home page with layout

--- a/direwolf/app/views/admins/index.html.erb
+++ b/direwolf/app/views/admins/index.html.erb
@@ -1,21 +1,293 @@
-<h1>Listing admins</h1>
+<div class="row">
+  <div class="col-md-4">
+    <div class="panel panel-warning">
+      <div class="panel-heading">
+        <h3 class="panel-title">Pending Admin Requests</h3>
+      </div>
+      <table class="table table-striped">
+        <thead>
+        <tr>
+          <th>#</th>
+          <th>First Name</th>
+          <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>1</td>
+          <td>@mdo</td>
+          <td>
+            <div class="btn-group">
+              <button type="button" class="btn btn-success">Show</button>
+              <button type="button" class="btn btn-danger">Remove</button>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>@fat</td>
+          <td>
+            <div class="btn-group">
+              <button type="button" class="btn btn-success">Show</button>
+              <button type="button" class="btn btn-danger">Remove</button>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>@twitter</td>
+          <td>
+            <div class="btn-group">
+              <button type="button" class="btn btn-success">Show</button>
+              <button type="button" class="btn btn-danger">Remove</button>
+            </div>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 
-<table>
-  <thead>
-    <tr>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+  <div class="col-md-4">
+    <div class="panel panel-warning">
+      <div class="panel-heading">
+        <h3 class="panel-title">Pending Employer Requests</h3>
+      </div>
+      <table class="table table-striped">
+        <thead>
+        <tr>
+          <th>#</th>
+          <th>First Name</th>
+          <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>1</td>
+          <td>@mdo</td>
+          <td>
+            <div class="btn-group">
+              <button type="button" class="btn btn-success">Show</button>
+              <button type="button" class="btn btn-danger">Remove</button>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>@fat</td>
+          <td>
+            <div class="btn-group">
+              <button type="button" class="btn btn-success">Show</button>
+              <button type="button" class="btn btn-danger">Remove</button>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>@twitter</td>
+          <td>
+            <div class="btn-group">
+              <button type="button" class="btn btn-success">Show</button>
+              <button type="button" class="btn btn-danger">Remove</button>
+            </div>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 
-  <tbody>
-    <% @admins.each do |admin| %>
-      <tr>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <div class="col-md-4">
+    <div class="panel panel-success">
+      <div class="panel-heading">
+        <h3 class="panel-title">Categories</h3>
+      </div>
+      <table class="table table-striped">
+        <thead>
+        <tr>
+          <th>Category</th>
+          <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>@mdo</td>
+          <td>
+            <div class="btn-group">
+              <button type="button" class="btn btn-success">Show</button>
+              <button type="button" class="btn btn-danger">Remove</button>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>@fat</td>
+          <td>
+            <div class="btn-group">
+              <button type="button" class="btn btn-success">Show</button>
+              <button type="button" class="btn btn-danger">Remove</button>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>@twitter</td>
+          <td>
+            <div class="btn-group">
+              <button type="button" class="btn btn-success">Show</button>
+              <button type="button" class="btn btn-danger">Remove</button>
+            </div>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
 
-<br>
+<div class="row">
+  <div class="col-md-4">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">Administrator Table</h3>
+      </div>
+      <table class="table table-striped">
+        <thead>
+        <tr>
+          <th>#</th>
+          <th>First Name</th>
+          <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>1</td>
+          <td>@mdo</td>
+          <td>
+            <div class="btn-group">
+              <button type="button" class="btn btn-success">Show</button>
+              <button type="button" class="btn btn-danger">Remove</button>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>@fat</td>
+          <td>
+            <div class="btn-group">
+              <button type="button" class="btn btn-success">Show</button>
+              <button type="button" class="btn btn-danger">Remove</button>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>@twitter</td>
+          <td>
+            <div class="btn-group">
+              <button type="button" class="btn btn-success">Show</button>
+              <button type="button" class="btn btn-danger">Remove</button>
+            </div>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 
+  <div class="col-md-4">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">Employer Table</h3>
+      </div>
+      <table class="table table-striped">
+        <thead>
+        <tr>
+          <th>#</th>
+          <th>First Name</th>
+          <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>1</td>
+          <td>@mdo</td>
+          <td>
+            <div class="btn-group">
+              <button type="button" class="btn btn-success">Show</button>
+              <button type="button" class="btn btn-danger">Remove</button>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>@fat</td>
+          <td>
+            <div class="btn-group">
+              <button type="button" class="btn btn-success">Show</button>
+              <button type="button" class="btn btn-danger">Remove</button>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>@twitter</td>
+          <td>
+            <div class="btn-group">
+              <button type="button" class="btn btn-success">Show</button>
+              <button type="button" class="btn btn-danger">Remove</button>
+            </div>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <div class="col-md-4">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">Job Seeker Table</h3>
+      </div>
+      <table class="table table-striped">
+        <thead>
+        <tr>
+          <th>#</th>
+          <th>First Name</th>
+          <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>1</td>
+          <td>@mdo</td>
+          <td>
+            <div class="btn-group">
+              <button type="button" class="btn btn-success">Show</button>
+              <button type="button" class="btn btn-danger">Remove</button>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>@fat</td>
+          <td>
+            <div class="btn-group">
+              <button type="button" class="btn btn-success">Show</button>
+              <button type="button" class="btn btn-danger">Remove</button>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>@twitter</td>
+          <td>
+            <div class="btn-group">
+              <button type="button" class="btn btn-success">Show</button>
+              <button type="button" class="btn btn-danger">Remove</button>
+            </div>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
