Adding category controller/view, demo unauthorized access

--- a/direwolf/app/views/employers/index.html.erb
+++ b/direwolf/app/views/employers/index.html.erb
@@ -1,21 +1,1 @@
-<h1>Listing employers</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @employers.each do |employer| %>
-      <tr>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
+<!--If not employer, then redirect to dashboard or 404-->
