--- a/direwolf/app/views/admins/index.html.erb
+++ b/direwolf/app/views/admins/index.html.erb
@@ -100,6 +100,7 @@
   <div class="col-md-4">
     <div class="panel panel-success">
       <div class="panel-heading">
+        <a href="#" class="pull-right">Create New Category</a>
         <h3 class="panel-title">Categories</h3>
       </div>
       <table class="table table-striped">
