--- a/direwolf/app/views/layouts/application.html.erb
+++ b/direwolf/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown"><strong><%= current_user.name %></strong></a>
                   <ul class="dropdown-menu" role="menu">
                     <li><%= link_to "Sign out", signout_path, id: "sign_out" %></li>
+                    <!--<li>< %= link_to "Profile", @type, id: "profile" % ></li>-->
                   </ul>
                 </li>
               <% else %>
