Fixing registration forms

--- a/direwolf/app/views/employers/_form.html.erb
+++ b/direwolf/app/views/employers/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @employer, :html => {:class => "form-horizontal center"} do |f| %>
-    <% if @employer.errors.any? %>
+  <% if @employer.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@employer.errors.count, "error") %> prohibited this employer from being saved:</h2>
 
@@ -9,15 +9,32 @@
       <% end %>
       </ul>
     </div>
-    <% end %>
+  <% end %>
 
-    <div class="field">
-      <%= f.label :name, "Name:", class: "col-md-4 control-label" %>
-      <%= f.text_field :name %>
-    </div>
-    <div class="field">
-      <div class="col-md-4">
-        <%= f.submit "Submit", class: "btn btn-default btn-primary" %>
+  <form class="form-horizontal">
+    <fieldset>
+
+      <legend><%= title %></legend>
+
+      <!-- Text input-->
+      <div class="form-group">
+        <div class="field">
+          <%= f.label :name, "Name:", class: "col-md-4 control-label", for: "name" %>
+          <div class="col-md-4">
+            <%= f.text_field :name , class: "form-control input-md", placeholder: "Full Name" %>
+          </div>
+        </div>
       </div>
-    </div>
+
+      <!-- Button -->
+      <div class="form-group">
+        <label class="col-md-4 control-label" for="submit"></label>
+        <div class="col-md-4">
+          <%= f.submit "Submit", class: "btn btn-default btn-primary" %>
+        </div>
+      </div>
+
+    </fieldset>
+  </form>
+
 <% end %>
