--- a/direwolf/app/views/admins/_form.html.erb
+++ b/direwolf/app/views/admins/_form.html.erb
@@ -11,13 +11,30 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name, "Name:", class: "col-md-4 control-label" %>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <div class="col-md-4">
-      <%= f.submit "Submit", class: "btn btn-default btn-primary" %>
-    </div>
-  </div>
+  <form class="form-horizontal">
+    <fieldset>
+
+      <legend><%= title %></legend>
+
+      <!-- Text input-->
+      <div class="form-group">
+        <div class="field">
+          <%= f.label :name, "Name:", class: "col-md-4 control-label", for: "name" %>
+          <div class="col-md-4">
+            <%= f.text_field :name , class: "form-control input-md", placeholder: "Full Name" %>
+          </div>
+        </div>
+      </div>
+
+      <!-- Button -->
+      <div class="form-group">
+        <label class="col-md-4 control-label" for="submit"></label>
+        <div class="col-md-4">
+          <%= f.submit "Submit", class: "btn btn-default btn-primary" %>
+        </div>
+      </div>
+
+    </fieldset>
+  </form>
+
 <% end %>
