--- a/direwolf/app/views/seekers/_form.html.erb
+++ b/direwolf/app/views/seekers/_form.html.erb
@@ -1,23 +1,37 @@
 <%= form_for @seeker, :html => {:class => "form-horizontal center"} do |f| %>
-    <% if @seeker.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@seeker.errors.count, "error") %> prohibited this seeker from being saved:</h2>
+  <% if @seeker.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@seeker.errors.count, "error") %> prohibited this seeker from being saved:</h2>
 
-      <ul>
-      <% @seeker.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
+    <ul>
+    <% @seeker.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
     <% end %>
+    </ul>
+  </div>
+  <% end %>
 
-    <div class="field">
-      <%= f.label :name, "Name:", class: "col-md-4 control-label" %>
-      <%= f.text_field :name %>
-    </div>
-    <div class="field">
-      <div class="col-md-4">
-        <%= f.submit "Submit", class: "btn btn-default btn-primary" %>
+  <form class="form-horizontal">
+    <fieldset>
+      <legend><%= title %></legend>
+      <!-- Text input-->
+      <div class="form-group">
+        <div class="field">
+          <%= f.label :name, "Name:", class: "col-md-4 control-label", for: "name" %>
+          <div class="col-md-4">
+            <%= f.text_field :name , class: "form-control input-md", placeholder: "Full Name" %>
+          </div>
+        </div>
       </div>
-    </div>
+
+      <!-- Button -->
+      <div class="form-group">
+        <label class="col-md-4 control-label" for="submit"></label>
+        <div class="col-md-4">
+          <%= f.submit "Submit", class: "btn btn-default btn-primary" %>
+        </div>
+      </div>
+
+    </fieldset>
+  </form>
 <% end %>
