--- a/direwolf/app/views/category/index.html.erb
+++ b/direwolf/app/views/category/index.html.erb
@@ -1,19 +1,77 @@
-<h1>Listing Categories</h1>
-<table>
-  <thead>
-  <tr>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-  </thead>
+<div class="col-md-offset-3 col-md-6">
+  <div class="panel panel-default">
+    <!-- Default panel contents -->
+    <div class="panel-heading"><h3>Categories</h3></div>
+    <div class="panel-body">
 
-  <tbody>
-  <% @category.each do |category| %>
-    <tr>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+      <% if !notice.nil? and !notice.empty? %>
+        <div class="alert alert-success" role="alert"><%= notice %></div>
+      <% end %>
 
-<br>
+      <%= form_for @category, url: category_index_path, :html => {:class => "form-inline"} do |f| %>
+        <% if @category.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@category.errors.count, "error") %> prohibited this admin from being saved:</h2>
+
+            <ul>
+              <% @category.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+              <% end %>
+            </ul>
+          </div>
+        <% end %>
+
+        <form class="form-horizontal">
+          <fieldset>
+
+            <!-- Text input-->
+            <div class="form-group">
+              <div class="field col-md-offset-4 col-md-4">
+                <%= f.text_field :name , class: "form-control input-sm", placeholder: "Category Name" %>
+              </div>
+            </div>
+
+            <!-- Button -->
+            <div class="form-group">
+              <div class="col-md-4 pull-right">
+                <%= f.submit "Add Category", class: "btn btn-default btn-primary" %>
+              </div>
+            </div>
+
+          </fieldset>
+        </form>
+
+      <% end %>
+    </div>
+
+    <!-- Table -->
+    <% if !@categories.empty? %>
+      <table class="table">
+        <thead>
+          <tr>
+            <th class="col-sm-8">Name</th>
+            <th class="col-sm-4">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @categories.each do |category| %>
+            <tr>
+              <td>
+                <%= category.name %>
+              </td>
+              <td>
+                <div class="btn-group">
+                  <%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+                </div>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    <% end %>
+
+    <ul class="list-group">
+      <li class="list-group-item alert alert-warning">Categories can only be added and removed!</li>
+    </ul>
+  </div>
+</div>
