--- a/direwolf/app/views/job/_form.html.erb
+++ b/direwolf/app/views/job/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @job, url: job_index_path, :html => {:class => "form-horizontal center"} do |f| %>
+<%= form_for @job, :html => {:class => "form-horizontal center"} do |f| %>
   <% if @job.errors.any? %>
   <div id="error_explanation">
     <h2><%= pluralize(@job.errors.count, "error") %> prohibited this employer from being saved:</h2>
