Adding controller for searches and job applications *jobs_controller reffers to job postings Adding show and edit for job_applications_controller

--- a/direwolf/app/views/jobs/show.html.erb
+++ b/direwolf/app/views/jobs/show.html.erb
@@ -8,4 +8,7 @@
   <% @job.tag_list.each do |x|%>
     <p><%=x%></p>
   <%end%>
+  <%if employer_owns @job.id %>
+    <%= link_to "Mange Applications", job_application_path(@job.id), class: "btn btn-success btn-block" %>
+  <%end%>
 <%end%>
