--- a/direwolf/app/views/employers/index.html.erb
+++ b/direwolf/app/views/employers/index.html.erb
@@ -3,38 +3,38 @@
   <%= link_to "New Job Posting", new_job_path, class: "btn btn-success btn-block" %>
 </div>
 
-<div class="col-md-4">
+<div class="col-md-offset-3 col-md-6">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h3 class="panel-title">Job Seeker Table</h3>
+      <h3 class="panel-title">Jobs Table</h3>
     </div>
     <table class="table table-striped">
       <thead>
-        <tr>
-          <th>#</th>
-          <th>First Name</th>
-          <th>Actions</th>
-        </tr>
+      <tr>
+        <th>#</th>
+        <th>First Name</th>
+        <th>Actions</th>
+      </tr>
       </thead>
       <tbody>
       <% if @jobs %>
         <% @jobs.each_index do |x| %>
-        <tr>
-        <td><%=x+1%></td>
-        <td><%= @jobs[x].title %></td>
-        <td>
-          <div class="btn-group">
-            <%= link_to "Show", job_path(@jobs[x].id), class: "btn btn-primary btn-block" %>
-          </div>
-          <div class="btn-group">
-            <%= link_to "Edit", edit_job_path(@jobs[x].id), class: "btn btn-success btn-block" %>
-          </div>
-          <div class="btn-group">
-            <%= link_to "Delete", job_path(@jobs[x].id), :method=> :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-block" %>
-          </div>
-        </td>
-        </tr>
-       <% end %>
+          <tr>
+            <td class="col-md-1">
+              <%= x+1 %>
+            </td>
+            <td class="col-md-6">
+              <%= @jobs[x].title %>
+            </td>
+            <td class="col-md-5">
+              <div class="btn-group">
+                <%= link_to "Show", job_path(@jobs[x].id), class: "btn btn-primary" %>
+                <%= link_to "Edit", edit_job_path(@jobs[x].id), class: "btn btn-success" %>
+                <%= link_to "Delete", job_path(@jobs[x].id), :method=> :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+              </div>
+            </td>
+          </tr>
+        <% end %>
       <% end %>
       </tbody>
     </table>
