--- a/direwolf/app/views/layouts/admin_layout.html.erb
+++ b/direwolf/app/views/layouts/admin_layout.html.erb
@@ -21,12 +21,19 @@
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li><a href="#">Search Jobs</a></li>
+              <li><a href="#">Job List</a></li>
               <li><a href="#">About</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in", class: "navbar-btn btn btn-default pull-right" %>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><strong>Admin: <%= current_user.name %></strong></a>
+                <ul class="dropdown-menu" role="menu">
+                  <li><a href="#">My Profile</a></li>
+                  <li><%= link_to "Google Settings", "https://www.google.com/settings/security", id: "settings" %></li>
+                  <li><%= link_to "Sign out", signout_path, id: "sign_out" %></li>
+                </ul>
+              </li>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
