--- a/direwolf/app/views/employers/index.html.erb
+++ b/direwolf/app/views/employers/index.html.erb
@@ -1,10 +1,6 @@
 <!--If not employer, then redirect to dashboard or 404-->
-<div class="btn-group">
-  <%= link_to "New Job Posting", new_job_path, class: "btn btn-success btn-block" %>
-</div>
-
 <div class="col-md-offset-3 col-md-6">
-  <div class="panel panel-primary">
+  <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">Jobs Table</h3>
     </div>
@@ -38,6 +34,7 @@
       <% end %>
       </tbody>
     </table>
+    <%= link_to "New Job Posting", new_job_path, class: "btn btn-success btn-block" %>
   </div>
 </div>
 
