--- a/direwolf/app/views/jobs/index.html.erb
+++ b/direwolf/app/views/jobs/index.html.erb
@@ -1,21 +1,9 @@
-<!--If not employer, then redirect to dashboard or 404-->
-<div class="btn-group">
-  <%= link_to "New Job Posting", new_job_path, class: "btn btn-success btn-block" %>
-</div>
-
 <div class="col-md-offset-3 col-md-6">
-  <div class="panel panel-primary">
+  <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">Jobs Table</h3>
     </div>
     <table class="table table-striped">
-      <thead>
-      <tr>
-        <th>#</th>
-        <th>First Name</th>
-        <th>Actions</th>
-      </tr>
-      </thead>
       <tbody>
       <% if @jobs %>
         <% @jobs.each_index do |x| %>
@@ -29,8 +17,10 @@
             <td class="col-md-5">
               <div class="btn-group">
                 <%= link_to "Show", job_path(@jobs[x].id), class: "btn btn-primary" %>
-                <%= link_to "Edit", edit_job_path(@jobs[x].id), class: "btn btn-success" %>
-                <%= link_to "Delete", job_path(@jobs[x].id), :method=> :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+                <% if @user_type == :employer %>
+                  <%= link_to "Edit", edit_job_path(@jobs[x].id), class: "btn btn-success" %>
+                  <%= link_to "Delete", job_path(@jobs[x].id), :method=> :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+                <% end %>
               </div>
             </td>
           </tr>
@@ -38,6 +28,9 @@
       <% end %>
       </tbody>
     </table>
+    <% if @user_type == :employer %>
+      <%= link_to "New Job Posting", new_job_path, class: "btn btn-success btn-block" %>
+    <% end %>
   </div>
 </div>
 
