--- a/direwolf/app/views/jobs/show.html.erb
+++ b/direwolf/app/views/jobs/show.html.erb
@@ -1,14 +1,51 @@
-<h1>Job Posting</h1>
-<%if @job%>
-  <h2 style="text-decoration:underline;"><%=@job.title.to_s%></h2>
-  <p><strong>Category: </strong> <%= @category %> </p>
-  <p><strong>Description: </strong>Nothing to see here</p>
-  <p><strong>Employer: </strong><%=@employer%></p>
-  <p><strong>Tags</strong></p>
-  <% @job.tag_list.each do |x|%>
-    <p><%=x%></p>
-  <%end%>
-  <%if employer_owns @job.id %>
-    <%= link_to "Mange Applications", job_application_path(@job.id), class: "btn btn-success btn-block" %>
-  <%end%>
-<%end%>
+<div class="col-md-offset-3 col-md-6">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title"><%=@job.title.to_s%></h3>
+    </div>
+    <div class="panel-body">
+      <%if @job%>
+        <form class="form-horizontal" role="form">
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Category:</label>
+            <div class="col-sm-10">
+              <p class="form-control-static"><%= @category %></p>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Description:</label>
+            <div class="col-sm-10">
+              <p class="form-control-static">Nothing Here Yet</p>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Employer:</label>
+            <div class="col-sm-10">
+              <p class="form-control-static"><%= @employer %></p>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Tags:</label>
+            <div class="col-sm-10">
+              <p class="form-control-static">
+                <% @job.tag_list.each do |tag|%>
+                  <span class="label label-danger"><%= tag %></span>
+                <%end%>
+              </p>
+            </div>
+          </div>
+        </form>
+    </div>
+
+        <%if employer_owns @job.id %>
+          <%= link_to "Manage Applications", job_application_path(@job.id), class: "btn btn-success btn-block" %>
+        <%end%>
+        <%if get_user_type == :seeker %>
+          <%= link_to "Apply", new_job_application_path(@job_id), class: "btn btn-success btn-block" %>
+        <%end%>
+
+    <%end%>
+  </div>
+</div>
