--- a/direwolf/app/views/layouts/application.html.erb
+++ b/direwolf/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li><a href="#">Search Jobs</a></li>
+              <li><%= link_to "Job List", jobs_path %></li>
               <li><a href="#">About</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
