--- a/direwolf/app/views/seekers/index.html.erb
+++ b/direwolf/app/views/seekers/index.html.erb
@@ -1,21 +1,137 @@
-<h1>Listing seekers</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @seekers.each do |seeker| %>
+<div class="col-md-4">
+  <div class="panel panel-primary">
+    <div class="panel-heading">
+      <h3 class="panel-title">Profile</h3>
+    </div>
+    <table class="table table-striped">
+      <tbody>
       <tr>
+        <td>Name:</td>
+        <td>Yinglei Zhang</td>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tr>
+        <td>Email:</td>
+        <td>yzhang44@ncsu.edu</td>
+      </tr>
+      <tr>
+        <td>Phone Number:</td>
+        <td>9198008547</td>
+      </tr>
+      <tr>
+        <td>Skills:</td>
+        <td>Ruby on Rails</td>
+      </tr>
+      <tr>
+        <td>Resume:</td>
+        <td>Plaintext</td>
+      </tr>
+      <tr>
+        <td>
+        <div class="btn-group">
+          <button type="button" class="btn btn-success">Edit Profile</button>
+          <button type="button" class="btn btn-danger">Remove</button>
+        </div>
+        <td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
 
-<br>
+<div class="col-md-4">
+  <div class="panel panel-primary">
+    <div class="panel-heading">
+      <h3 class="panel-title">Applied Jobs</h3>
+    </div>
+    <table class="table table-striped">
+      <thead>
+      <tr>
+        <th>#</th>
+        <th>First Name</th>
+        <th>Actions</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>1</td>
+        <td>@mdo</td>
+        <td>
+          <div class="btn-group">
+            <button type="button" class="btn btn-success">Show</button>
+            <button type="button" class="btn btn-danger">Remove</button>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>@fat</td>
+        <td>
+          <div class="btn-group">
+            <button type="button" class="btn btn-success">Show</button>
+            <button type="button" class="btn btn-danger">Remove</button>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>@twitter</td>
+        <td>
+          <div class="btn-group">
+            <button type="button" class="btn btn-success">Show</button>
+            <button type="button" class="btn btn-danger">Remove</button>
+          </div>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
 
+<div class="col-md-4">
+  <div class="panel panel-primary">
+    <div class="panel-heading">
+      <h3 class="panel-title">Suggested Jobs</h3>
+    </div>
+    <table class="table table-striped">
+      <thead>
+      <tr>
+        <th>#</th>
+        <th>First Name</th>
+        <th>Actions</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>1</td>
+        <td>@mdo</td>
+        <td>
+          <div class="btn-group">
+            <button type="button" class="btn btn-success">Show</button>
+            <button type="button" class="btn btn-danger">Remove</button>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>@fat</td>
+        <td>
+          <div class="btn-group">
+            <button type="button" class="btn btn-success">Show</button>
+            <button type="button" class="btn btn-danger">Remove</button>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>@twitter</td>
+        <td>
+          <div class="btn-group">
+            <button type="button" class="btn btn-success">Show</button>
+            <button type="button" class="btn btn-danger">Remove</button>
+          </div>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
