update the layout, need to implement edit profile, status, withdraw, show and apply function

--- a/direwolf/app/views/seekers/index.html.erb
+++ b/direwolf/app/views/seekers/index.html.erb
@@ -46,38 +46,42 @@
       <thead>
       <tr>
         <th>#</th>
-        <th>First Name</th>
-        <th>Actions</th>
+        <th>Company Name</th>
+        <th>Job Title</th>
+        <th>Action</th>
       </tr>
       </thead>
       <tbody>
       <tr>
         <td>1</td>
-        <td>@mdo</td>
+        <td>Google</td>
+        <td>Software developer</td>
         <td>
           <div class="btn-group">
-            <button type="button" class="btn btn-success">Show</button>
-            <button type="button" class="btn btn-danger">Remove</button>
+            <button type="button" class="btn btn-success">Status</button>
+            <button type="button" class="btn btn-danger">Withdraw</button>
           </div>
         </td>
       </tr>
       <tr>
         <td>2</td>
-        <td>@fat</td>
+        <td>Facebook</td>
+        <td>Sales</td>
         <td>
           <div class="btn-group">
-            <button type="button" class="btn btn-success">Show</button>
-            <button type="button" class="btn btn-danger">Remove</button>
+            <button type="button" class="btn btn-success">Status</button>
+            <button type="button" class="btn btn-danger">Withdraw</button>
           </div>
         </td>
       </tr>
       <tr>
         <td>3</td>
-        <td>@twitter</td>
+        <td>Twitter</td>
+        <td>Senior Manager</td>
         <td>
           <div class="btn-group">
-            <button type="button" class="btn btn-success">Show</button>
-            <button type="button" class="btn btn-danger">Remove</button>
+            <button type="button" class="btn btn-success">Status</button>
+            <button type="button" class="btn btn-danger">Withdraw</button>
           </div>
         </td>
       </tr>
@@ -89,44 +93,48 @@
 <div class="col-md-4">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h3 class="panel-title">Suggested Jobs</h3>
+      <h3 class="panel-title">Applied Jobs</h3>
     </div>
     <table class="table table-striped">
       <thead>
       <tr>
         <th>#</th>
-        <th>First Name</th>
-        <th>Actions</th>
+        <th>Company Name</th>
+        <th>Job Title</th>
+        <th>Action</th>
       </tr>
       </thead>
       <tbody>
       <tr>
         <td>1</td>
-        <td>@mdo</td>
+        <td>Google</td>
+        <td>Software developer</td>
         <td>
           <div class="btn-group">
             <button type="button" class="btn btn-success">Show</button>
-            <button type="button" class="btn btn-danger">Remove</button>
+            <button type="button" class="btn btn-danger">Apply</button>
           </div>
         </td>
       </tr>
       <tr>
         <td>2</td>
-        <td>@fat</td>
+        <td>Facebook</td>
+        <td>Sales</td>
         <td>
           <div class="btn-group">
             <button type="button" class="btn btn-success">Show</button>
-            <button type="button" class="btn btn-danger">Remove</button>
+            <button type="button" class="btn btn-danger">Apply</button>
           </div>
         </td>
       </tr>
       <tr>
         <td>3</td>
-        <td>@twitter</td>
+        <td>Twitter</td>
+        <td>Senior Manager</td>
         <td>
           <div class="btn-group">
             <button type="button" class="btn btn-success">Show</button>
-            <button type="button" class="btn btn-danger">Remove</button>
+            <button type="button" class="btn btn-danger">Apply</button>
           </div>
         </td>
       </tr>
