--- a/direwolf/app/views/seekers/index.html.erb
+++ b/direwolf/app/views/seekers/index.html.erb
@@ -28,7 +28,8 @@
       <tr>
         <td>
         <div class="btn-group">
-          <button type="button" class="btn btn-success">Edit Profile</button>
+          <%- #<button type="button" class="btn btn-success">Edit Profile</button> %>
+          <%= link_to "Edit Profile", edit_seeker_path(self), class: "btn btn-primary" %>
         </div>
         <td>
       </tr>
@@ -101,7 +102,7 @@
         <th>#</th>
         <th>Company Name</th>
         <th>Job Title</th>
-        <th>Action</th>
+        <th>Description</th>
       </tr>
       </thead>
       <tbody>
@@ -110,10 +111,7 @@
         <td>Google</td>
         <td>Software developer</td>
         <td>
-          <div class="btn-group">
-            <button type="button" class="btn btn-success">Show</button>
-            <button type="button" class="btn btn-danger">Apply</button>
-          </div>
+          Link to job posting page
         </td>
       </tr>
       <tr>
@@ -121,10 +119,7 @@
         <td>Facebook</td>
         <td>Sales</td>
         <td>
-          <div class="btn-group">
-            <button type="button" class="btn btn-success">Show</button>
-            <button type="button" class="btn btn-danger">Apply</button>
-          </div>
+          Link to job posting page
         </td>
       </tr>
       <tr>
@@ -132,10 +127,7 @@
         <td>Twitter</td>
         <td>Senior Manager</td>
         <td>
-          <div class="btn-group">
-            <button type="button" class="btn btn-success">Show</button>
-            <button type="button" class="btn btn-danger">Apply</button>
-          </div>
+          Link to job posting page
         </td>
       </tr>
       </tbody>
