--- a/direwolf/app/views/seekers/index.html.erb
+++ b/direwolf/app/views/seekers/index.html.erb
@@ -94,7 +94,7 @@
 <div class="col-md-4">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h3 class="panel-title">Applied Jobs</h3>
+      <h3 class="panel-title">Recommended Jobs</h3>
     </div>
     <table class="table table-striped">
       <thead>
