update the function to see job application status(the job application page is not complete yet)

--- a/direwolf/app/views/seekers/index.html.erb
+++ b/direwolf/app/views/seekers/index.html.erb
@@ -59,7 +59,7 @@
         <td>Software developer</td>
         <td>
           <div class="btn-group">
-            <%= link_to "Status", jobs_index_path, class: "btn btn-primary" %>
+            <%= link_to "Status", jobs_path, class: "btn btn-primary" %>
             <button type="button" class="btn btn-danger">Withdraw</button>
           </div>
         </td>
@@ -70,7 +70,7 @@
         <td>Sales</td>
         <td>
           <div class="btn-group">
-            <%= link_to "Status", jobs_index_path, class: "btn btn-primary" %>
+            <%= link_to "Status", jobs_path, class: "btn btn-primary" %>
             <button type="button" class="btn btn-danger">Withdraw</button>
           </div>
         </td>
@@ -81,7 +81,7 @@
         <td>Senior Manager</td>
         <td>
           <div class="btn-group">
-            <%= link_to "Status", jobs_index_path, class: "btn btn-primary" %>
+            <%= link_to "Status", jobs_path, class: "btn btn-primary" %>
             <button type="button" class="btn btn-danger">Withdraw</button>
           </div>
         </td>
