update the job recommendation part (the algorithm is yet to be implemented)

--- a/direwolf/app/views/seekers/index.html.erb
+++ b/direwolf/app/views/seekers/index.html.erb
@@ -111,7 +111,7 @@
         <td>Google</td>
         <td>Software developer</td>
         <td>
-          Link to job posting page
+          <%= link_to "Job Description", jobs_path %>
         </td>
       </tr>
       <tr>
@@ -119,7 +119,7 @@
         <td>Facebook</td>
         <td>Sales</td>
         <td>
-          Link to job posting page
+          <%= link_to "Job Description", jobs_path %>
         </td>
       </tr>
       <tr>
@@ -127,7 +127,7 @@
         <td>Twitter</td>
         <td>Senior Manager</td>
         <td>
-          Link to job posting page
+          <%= link_to "Job Description", jobs_path %>
         </td>
       </tr>
       </tbody>
