add a create profile button on seekers page

--- a/direwolf/app/views/seekers/index.html.erb
+++ b/direwolf/app/views/seekers/index.html.erb
@@ -29,7 +29,10 @@
         <td>
         <div class="btn-group">
           <%- #<button type="button" class="btn btn-success">Edit Profile</button> %>
+          <%= link_to "Create Profile",profiles_path, class: "btn btn-primary" %>
+          <td>
           <%= link_to "Edit Profile",profiles_path, class: "btn btn-primary" %>
+          </td>
         </div>
         <td>
       </tr>
