remove the create profile button and the application status button

--- a/direwolf/app/views/seekers/index.html.erb
+++ b/direwolf/app/views/seekers/index.html.erb
@@ -29,10 +29,7 @@
         <td>
         <div class="btn-group">
           <%- #<button type="button" class="btn btn-success">Edit Profile</button> %>
-          <%= link_to "Create Profile",profiles_path, class: "btn btn-primary" %>
-          <td>
           <%= link_to "Edit Profile",profiles_path, class: "btn btn-primary" %>
-          </td>
         </div>
         <td>
       </tr>
@@ -40,6 +37,7 @@
     </table>
   </div>
 </div>
+
 
 <div class="col-md-4">
   <div class="panel panel-primary">
@@ -50,8 +48,9 @@
       <thead>
       <tr>
         <th>#</th>
-        <th>Company Name</th>
+        <th>Company</th>
         <th>Job Title</th>
+        <th>Status</th>
         <th>Action</th>
       </tr>
       </thead>
@@ -60,9 +59,9 @@
         <td>1</td>
         <td>Google</td>
         <td>Software developer</td>
+        <td>status</td>
         <td>
           <div class="btn-group">
-            <%= link_to "Status", jobs_path, class: "btn btn-primary" %>
             <button type="button" class="btn btn-danger">Withdraw</button>
           </div>
         </td>
@@ -71,9 +70,9 @@
         <td>2</td>
         <td>Facebook</td>
         <td>Sales</td>
+        <td>status</td>
         <td>
           <div class="btn-group">
-            <%= link_to "Status", jobs_path, class: "btn btn-primary" %>
             <button type="button" class="btn btn-danger">Withdraw</button>
           </div>
         </td>
@@ -82,9 +81,9 @@
         <td>3</td>
         <td>Twitter</td>
         <td>Senior Manager</td>
+        <td>status</td>
         <td>
           <div class="btn-group">
-            <%= link_to "Status", jobs_path, class: "btn btn-primary" %>
             <button type="button" class="btn btn-danger">Withdraw</button>
           </div>
         </td>
@@ -93,6 +92,7 @@
     </table>
   </div>
 </div>
+
 
 <div class="col-md-4">
   <div class="panel panel-primary">
@@ -103,7 +103,7 @@
       <thead>
       <tr>
         <th>#</th>
-        <th>Company Name</th>
+        <th>Company</th>
         <th>Job Title</th>
         <th>Description</th>
       </tr>
@@ -137,3 +137,4 @@
     </table>
   </div>
 </div>
+
