--- a/direwolf/app/views/seekers/index.html.erb
+++ b/direwolf/app/views/seekers/index.html.erb
@@ -29,7 +29,7 @@
         <td>
         <div class="btn-group">
           <%- #<button type="button" class="btn btn-success">Edit Profile</button> %>
-          <%= link_to "Edit Profile",profiles_path, class: "btn btn-primary" %>
+          <%= link_to "Edit Profile",new_profile_path, class: "btn btn-primary" %>
         </div>
         <td>
       </tr>
