--- a/direwolf/app/views/profiles/_form.html.erb
+++ b/direwolf/app/views/profiles/_form.html.erb
@@ -32,6 +32,6 @@
     <%= f.text_field :resume %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Save Profile" %>
   </div>
 <% end %>
