--- a/direwolf/app/views/profiles/edit.html.erb
+++ b/direwolf/app/views/profiles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing profiles</h1>
+<h1>Your profiles</h1>
 
 <table>
   <%if false%>
@@ -50,7 +50,6 @@
       </tr>
       <tr>
         <td><%= link_to 'Show', profile %></td>
-        <td><%= link_to 'Edit', edit_profile_path(profile) %></td>
         <td><%= link_to 'Destroy', profile, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
   <% end %>
