--- a/direwolf/app/views/profiles/index.html.erb
+++ b/direwolf/app/views/profiles/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing profiles</h1>
+<h1>Your profiles</h1>
 
 <table>
   <%if false%>
@@ -49,8 +49,10 @@
         <td><%= profile.resume %></td>
       </tr>
       <tr>
-        <td><%= link_to 'Show', profile %></td>
-        <td><%= link_to 'Edit', edit_profile_path(profile) %></td>
+        <td><%= link_to 'Show', seekers_path %></td>
+       <%if false%>
+       <td><%= link_to 'Edit', edit_profile_path(profile) %></td>
+       <%end%>
         <td><%= link_to 'Destroy', profile, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
