--- a/direwolf/app/views/seekers/index.html.erb
+++ b/direwolf/app/views/seekers/index.html.erb
@@ -7,23 +7,23 @@
       <tbody>
       <tr>
         <td>Name:</td>
-        <td>Yinglei Zhang</td>
+        <td><%=@seeker.name%></td>
       </tr>
       <tr>
         <td>Email:</td>
-        <td>yzhang44@ncsu.edu</td>
+        <td><%=@seeker_email%></td>
       </tr>
       <tr>
         <td>Phone Number:</td>
-        <td>9198008547</td>
+        <td><%=@profile_phone%></td>
       </tr>
       <tr>
         <td>Skills:</td>
-        <td>Ruby on Rails</td>
+        <td><%=@profile_skills%></td>
       </tr>
       <tr>
         <td>Resume:</td>
-        <td>Plaintext</td>
+        <td><%=@profile_resume%></td>
       </tr>
       <tr>
         <td>
